--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,5 @@
     <dimen name="padding_small">8dp</dimen>
     <dimen name="padding_medium">16dp</dimen>
     <dimen name="image_size">64dp</dimen>
+    <dimen name="detail_topbar_close_button_padding_horizontal">10dp</dimen>
 </resources>
