--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,7 +1,10 @@
 <resources>
     <dimen name="padding_small">8dp</dimen>
     <dimen name="padding_medium">16dp</dimen>
+    <dimen name="card_padding">10dp</dimen>
+    <dimen name="header_padding">20dp</dimen>
     <dimen name="image_size">64dp</dimen>
     <dimen name="detail_topbar_close_button_padding_horizontal">10dp</dimen>
     <dimen name="detail_topbar_back_button_padding_horizontal">24dp</dimen>
+    <dimen name="windrose_size">100dp</dimen>
 </resources>
